--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@ body{
 h1.titulo-azul{
     color: #2092D3;
     font-family: 'Poppins', Tahoma, Geneva, Verdana, sans-serif;
-    text-align: center;
+    text-align: left;
     font-size: 28px;
     margin-top: 0px;
     margin-bottom: 20px;
@@ -67,7 +67,7 @@ h1.titulo-azul{
 
 #lista-preta{
     color: black;
-    font-family: verdana;
+    font-family: 'Poppins';
     text-align: right;
     font-size: 16px;
     line-height: 1.6;
@@ -79,7 +79,7 @@ h1.titulo-azul{
 .paragrafo-preto{
     color: black;
     font-family: verdana;
-    text-align: right;
+    text-align: left;
     font-size: 16px;
     line-height: 1.6;
     margin-top: 5px;
@@ -110,7 +110,7 @@ h1>{
 .chamada-final{
     color: #13225E;
     font-family: 'Poppins', Tahoma, Geneva, Verdana, sans-serif;
-    text-align: right;
+    text-align: center;
     font-size: 22px;
     margin-top: 10px;
     margin-bottom: 10px;
