--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background-color: white;
+    background-color: #ffffff;
     font-family: 'Poppins', sans-serif;
     color: #333;
     display: flex;
@@ -17,7 +17,8 @@ body {
 
 /* Container Principal */
 .container {
-    width: 90%;
+    background-image:  #ffffff;
+    width: 100%;
     max-width: 1200px;
     padding: 40px 20px;
     text-align: center; /* Centraliza o H1 */
@@ -138,6 +139,7 @@ body {
 
 
 #imagem{
+    background-color: #ffffff;
     text-align: right;
     margin-top: 20px;
 }
