ajustes: Seção de agendamento

--- a/styles.css
+++ b/styles.css
@@ -1271,7 +1271,7 @@ footer{
     }
 
 
-    .agendamento-section {
+    #agendamento-section {
         display: flex;
         flex-direction: column;
         gap: 30px; 
